# tunaos

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  bochsrc  compile.sh
boot/: boot.asm  disk.asm  gdt.asm  print.asm  print_string_pm.asm  protected_mode.asm
boot/loader/: loader.asm  memory.asm
common/: definitions.h  linked_list.c  linked_list.h  queue.h
drivers/: cmos.c  cmos.h  pic.c  pic.h  pic_8259A.c  pic_8259A.h  pit_82C54.c  pit_82C54.h  screen.c  screen.h  timer.c  timer.h
kernel/: cpu.c  cpu.h  cpuid.asm  interrupts.c  interrupts.h  irq.asm  irq.h  isr.asm  isr.h  kernel.c  kernel_entry.asm  low_level.c  low_level.h  memory.c  memory.h  queue.c  queue.h  scheduler.c  scheduler.h  system.c  system.h  system_clock.c  system_clock.h  task.c  task.h  task_struct.h  task_switch.asm  util.c  util.h
src/boot/: Makefile  boot.asm  print.asm
tests/: linked_list.check
